css/layout.css
@import url("http://fonts.googleapis.com/css?family=Numans");
@import url("http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic,700italic");
@import '../vendor/css/animate-custom.css';
body {
  background: #eee;
  margin: 0px;
  font-family: Helvetica, Arial, sans-serif;
}
body > .container {
  padding-top: 20px;
}
body div.page.github_fork_me {
  z-index: 200;
  position: fixed;
  top: 0px;
  right: 0px;
}
.animated {
  -webkit-animation-fill-mode: both;
  -moz-animation-fill-mode: both;
  -o-animation-fill-mode: both;
  -ms-animation-fill-mode: both;
  animation-fill-mode: both;
}
.kb {
  font-family: "Numans", 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
a:link,
a:visited {
  color: #2ba8d9;
  text-decoration: none;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
  -o-transition: color 200ms;
  -ms-transition: color 200ms;
  transition: color 200ms;
}
a:link {
  color: #2ba8d9;
}
a:visited {
  color: #449dc0;
}
a:hover {
  color: #56bae1;
}
a:active {
  color: #2088b1;
}
a:visited:hover {
  color: #74adc3;
}
a:visited:active {
  color: #407b91;
}
a:focus {
  text-decoration: underline;
}
tt,
kbd,
samp {
  font-family: "Ubuntu Mono", monospaced;
}
header {
  position: relative;
  font-size: 70px;
  padding: 20px 0 20px;
  font-family: "Numans", 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
header .lock {
  line-height: 1em;
}
section#content {
  position: relative;
  z-index: 100;
  -webkit-animation-delay: 2s;
  -moz-animation-delay: 2s;
  -o-animation-delay: 2s;
  -ms-animation-delay: 2s;
  animation-delay: 2s;
  line-height: 1.2em;
  -webkit-font-smoothing: antialiased;
}
section#content .kb {
  font-family: "Numans", 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
.demos_result_box {
  display: block;
  padding: 8.5px;
  margin: 0 0 9px;
  font-size: 12px;
  line-height: 18px;
  background-color: #ebd6ff;
  border: 1px solid #ccc;
  -webkit-border-radius: 4px;
  border-radius: 4px;
}
pre.prettyprint span {
  font-size: 12px;
}
.accordion-heading {
  background-color: #e5e5e5;
}

